# nimbus-ecommerce

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RELATO_IA.md  pyproject.toml
corpus/: entrega_rastreamento.md  formas_pagamento.md  garantia_e_suporte.md  politica_trocas_devolucoes.md
data/: cupons.csv  frete.csv  produtos.csv
docs/superpowers/plans/: 2026-04-28-ecommerce-agent-plan.md
docs/superpowers/specs/: 2026-04-28-ecommerce-agent-design.md
nimbus/: __main__.py  agent.py  cli.py
nimbus/llm/: _stream_accumulator.py  base.py  groq_client.py  openrouter_client.py
nimbus/prompts/: system.md
nimbus/rag/: chunker.py  embeddings.py  store.py
nimbus/tools/: cart.py  catalog.py  errors.py  pricing.py  registry.py  report.py
tests/: conftest.py  test_agent_debug.py  test_agent_integration.py  test_cart.py  test_catalog.py  test_chunker.py  test_history_window.py  test_logging.py  test_loop_max_iter.py  test_pricing.py  test_rag_store.py  test_report.py  test_streaming.py  test_tool_errors.py  test_tool_parsing.py
