[project]
name = "nimbus-ecommerce"
version = "0.1.0"
description = "Agente conversacional CLI para e-commerce fictício (Loja Nimbus)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
nimbus = "nimbus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nimbus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
